--- a/ch7.ipynb
+++ b/ch7.ipynb
@@ -8,7 +8,11 @@
      "name": "#%% md\n"
     }
    },
-   "source": "# Chapter 7 Appendix"
+   "source": [
+    "# Chapter 7 Appendix\n",
+    "\n",
+    "## 7.1 Web-scraping coding"
+   ]
   }
  ],
  "metadata": {
