--- a/ch2.ipynb
+++ b/ch2.ipynb
@@ -18,6 +18,10 @@
     }
    },
    "source": [
+    "Web scraping is an interactive process between computers and websites using HyperText Markup Language (HTML). Through HTML, web scraping can use bots to extract content and data from websites. Several softwares, like Python, R, and STATA can be used to do web scraping. Here legislative information web scraping is achieved by Python.\n",
+    "\n",
+    "In this codebook, special Python language terms like Python module, library, function,and syntax are all italic and texts in the box represent code. Full codes without interpretation are in the appendix.\n",
+    "\n",
     "In this chapter, we introduce the webscraping tool set.\n",
     "\n",
     "## Python Language\n",
